Wed Aug 25 17:24:17 2004  Manish Singh  <yosh@gimp.org>

	* gdk/x11/gdkfont-x11.c: remove unused gdk_font_charset_for_locale()
	function.

	* gdk/x11/gdkinput-x11.c (_gdk_input_common_init): remove unused
	variables num_extensions and extensions.

	* gtk/gtkhsv.c: remove unused gtk_hsv_get_focus_gc() function.

Wed Aug 25 17:14:58 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtktreeview.c (gtk_tree_view_search_activate): initialize
	path so we don't potentially use an undefined pointer.

	* gtk/gtkfilechooserdefault.c (shortcuts_list_create): add G_CALLBACK
	cast for tree_view_keybinding_cb.

	* gtk/gtkfilechooserdefault.c (location_entry_create): cast to
	GTK_FILE_CHOOSER_ENTRY for _gtk_file_chooser_entry_set_file_part()
	calls.

	* gtk/gtkcellrenderercombo.c (gtk_cell_renderer_combo_start_editing):
	cast to GTK_COMBO_BOX for gtk_combo_box_set_active_iter() call.

	* gtk/gtkselection.c (selection_get_text_plain): make len a gsize,
	since that's what g_convert_with_fallback() expects.

Wed Aug 25 16:14:34 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_search_activate): activate the
	typeahead entry on enter.

2004-08-25  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_attach_to_widget): Steal ATTACHED_MENUS
	list so its tail isn't freed when we re-set it, noticed
	by Hans Petter Jansson.

	* gtk/gtksizegroup.c (gtk_size_group_add_widget): Fix
	a typo, noticed by Tim Janik.

Wed Aug 25 15:15:56 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkpathbar.c (gtk_path_bar_size_allocate): Change the Down
	button to be end-justified, so that clicking on it is a stable
	operation.

Tue Aug 24 02:06:37 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtktreeview.c
	(gtk_tree_view_real_expand_collapse_cursor_row): Don't handle the
	event if we have no children.

	* gtk/gtkfilechooserdefault.c (trap_activate_cb):
	(tree_view_keybinding_cb):Since GtkTreeView has a keybinding